--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
+    "firebase": "^10.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "sort-by": "^1.2.0"
   },
